--- a/jemdoc.conf
+++ b/jemdoc.conf
@@ -2,6 +2,19 @@
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 
 [bodystart]
+<!-- MathJax -->
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+<script>
+    window.MathJax = {
+        tex: {
+            tags: 'ams'
+        }
+    };
+</script>
+<!-- End MathJax -->
+</head>
+<body>
 
 [bodyend]
 </body>
@@ -19,4 +32,3 @@
 </script>
 
 </html>
-
